# c-algorithms

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .lvimrc  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  COPYING.md  Catalan.c  ChangeLog  Doxyfile  Makefile.am  NEWS  NEWS.md  README  README.md  STYLE.md  TRIDIAGONAL.c  autogen.sh  configure.ac  coverage-1.2.txt  index.html  libcalg-1.0.pc.in  params.json  testing.html
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: make.yml
algorithms/arraylist/: Makefile  arraylist.c  arraylist.h  test-arraylist.c
algorithms/hashtable/: hashtable.h
algorithms/list/: Makefile  list.c  list.h  test-list.c
algorithms/queue/: Makefile  queue.c  queue.h  test-queue.c
algorithms/set/: set.c  set.h
algorithms/slist/: Makefile  slist.c  slist.h  test-slist.c
doc/: Doxyfile  Makefile.am  annotated.html  arraylist_8h.html  avl-tree_8h.html  binary-heap_8h.html  binomial-heap_8h.html  bloom-filter_8h.html  compare-int_8h.html  compare-pointer_8h.html  compare-string_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  hash-int_8h.html  hash-pointer_8h.html  hash-string_8h.html  hash-table_8h.html  index.html  intro.h  list_8h.html  queue_8h.html  set_8h.html  slist_8h.html  struct__ArrayList.html  struct__HashTableIterator.html  struct__ListIterator.html  struct__SListIterator.html  struct__SetIterator.html  trie_8h.html
src/: DFS.c  DoublyLL.c  Makefile.am  alloc-testing.c  alloc-testing.h  alt-value-type.h  arraylist.c  arraylist.h  avl-tree.c  avl-tree.h  avltree.c  avltree.h  bfs.c  binary-heap.c  binary-heap.h  binarytree.c  binomial-heap.c  binomial-heap.h  bloom-filter.c  bloom-filter.h  bstarray.c  checkbst.c  compare-int.c  compare-int.h  compare-pointer.c  compare-pointer.h  compare-string.c  compare-string.h  gencov  hash-int.c  hash-int.h  hash-pointer.c  hash-pointer.h  hash-string.c  hash-string.h  hash-table.c  hash-table.h  hashtable.c  hashtable.h  libcalg.h  (+17 more)
test/: .gitignore  Circular Linked List.c  Doubly Linked List.c  Makefile.am  Singly Linked List.c  alloc-testing.c  alloc-testing.h  framework.c  framework.h  test-alloc-testing.c  test-arraylist.c  test-avl-tree.c  test-avltree.c  test-binary-heap.c  test-binomial-heap.c  test-bloom-filter.c  test-compare-functions.c  test-cpp.cpp  test-hash-functions.c  test-hash-table.c  test-hashtable.c  test-list.c  test-queue.c  test-rb-tree.c  test-set.c  test-slist.c  test-sortedarray.c  test-tree.c  test-trie.c  valgrind-wrapper
tools/: README  cvshistory  smart-indent  svnhistory
util/compare-functions/: compare-int.c  compare-int.h  compare-pointer.c  compare-pointer.h  compare-string.c  compare-string.h  int.c  pointer.c
util/hash-functions/: hash-pointer.c  hash-string.c
