
AM_CFLAGS = -Wall

lib_LTLIBRARIES=libcalg.la

SRC=\
arraylist.c        compare-pointer.h  hash-pointer.c  hashtable.h  set.c     \
arraylist.h        compare-string.c   hash-pointer.h  list.c       set.h     \
compare-int.c      compare-string.h   hash-string.c   list.h       slist.c   \
compare-int.h      hash-int.c         hash-string.h   queue.c      slist.h   \
compare-pointer.c  hash-int.h         hashtable.c     queue.h                \
avltree.c          avltree.h          trie.c          trie.h

libcalg_la_SOURCES=$(SRC)

